--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           ><span class="logo-web">Web</span>Studio</a
         >
         <ul>
-          <li><a class="studio" href="">Studio</a></li>
-          <li><a class="portfolio" href="">Portfolio</a></li>
-          <li><a class="contacts" href="">Contacts</a></li>
+          <li><a class="navig" href="">Studio</a></li>
+          <li><a class="navig" href="">Portfolio</a></li>
+          <li><a class="navig" href="">Contacts</a></li>
         </ul>
       </nav>
 
