--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html"
-          ><span class="logo-web">Web</span>Studio</a
-        >
         <ul>
+          <li>
+            <a class="logo" href="./index.html"
+              >Web<span class="logo-studio">Studio</span></a
+            >
+          </li>
           <li><a class="navig" href="">Studio</a></li>
           <li><a class="navig" href="">Portfolio</a></li>
           <li><a class="navig" href="">Contacts</a></li>
