--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <a class="logo" href="./index.html"
           >Web<span class="logo-studio">Studio</span></a
         >
-        <ul>
-          <li><a class="navig" href="">Studio</a></li>
-          <li><a class="navig" href="">Portfolio</a></li>
-          <li><a class="navig" href="">Contacts</a></li>
+        <ul class="header-menu">
+          <li><a class="header-menu-item" href="./index.html">Studio</a></li>
+          <li><a class="header-menu-item" href="">Portfolio</a></li>
+          <li><a class="header-menu-item" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
+      <address class="contacts-data">
         <ul>
           <li>
             <a class="email" href="mailto:info@devstudio.com"
