--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           >Web<span class="logo-studio">Studio</span></a
         >
         <ul class="header-menu">
-          <li><a class="header-menu-item" href="./index.html">Studio</a></li>
+          <li>
+            <a class="header-menu-item-studio" href="./index.html">Studio</a>
+          </li>
           <li><a class="header-menu-item" href="">Portfolio</a></li>
           <li><a class="header-menu-item" href="">Contacts</a></li>
         </ul>
