--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         >
         <ul class="header-menu">
           <li>
-            <a class="header-menu-item-studio" href="./index.html">Studio</a>
+            <a class="header-menu-item" href="./index.html">Studio</a>
           </li>
           <li><a class="header-menu-item" href="">Portfolio</a></li>
           <li><a class="header-menu-item" href="">Contacts</a></li>
