first section cs

--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
       </address>
     </header>
     <main>
-      <section class="site-face">
+      <section class="title">
         <h1>Effective Solutions for Your Business</h1>
-        <button class="title-button" type="button">
-          <span class="button-text">Order Service</span>
-        </button>
+        <button class="title-button" type="button">Order Service</button>
       </section>
       <section>
         <h2>Features</h2>
