fix css first section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section class="title">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="title-header">Effective Solutions for Your Business</h1>
         <button class="title-button" type="button">Order Service</button>
       </section>
       <section>
