--- a/index.html
+++ b/index.html
@@ -49,33 +49,33 @@
         <h1 class="title-header">Effective Solutions for Your Business</h1>
         <button class="title-button" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Features</h2>
-        <ul>
+      <section class="features">
+        <h2 class="features-title">Features</h2>
+        <ul class="features-title-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="list-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="list-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="list-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="list-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -83,9 +83,9 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -93,8 +93,8 @@
               width="264"
               height="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-list-title">Mark Guerrero</h3>
+            <p class="team-list-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -103,8 +103,8 @@
               width="264"
               height="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-list-title">Tom Ford</h3>
+            <p class="team-list-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -113,8 +113,8 @@
               width="264"
               height="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-list-title">Camila Garcia</h3>
+            <p class="team-list-text">Marketing</p>
           </li>
           <li>
             <img
@@ -123,8 +123,8 @@
               width="264"
               height="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-list-title">Daniel Wilson</h3>
+            <p class="team-list-text">UI Designer</p>
           </li>
         </ul>
       </section>
