--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/img1.jpg"
               alt="Mark Guerrero"
@@ -96,7 +96,7 @@
             <h3 class="team-list-title">Mark Guerrero</h3>
             <p class="team-list-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/img2.jpg"
               alt="Tom Ford"
@@ -106,7 +106,7 @@
             <h3 class="team-list-title">Tom Ford</h3>
             <p class="team-list-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/img3.jpg"
               alt="Camila Garcia"
@@ -116,7 +116,7 @@
             <h3 class="team-list-title">Camila Garcia</h3>
             <p class="team-list-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/img4.jpg"
               alt="Daniel Wilson"
