--- a/index.html
+++ b/index.html
@@ -128,47 +128,67 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
           <li>
-            <img src="./images/portfolio-1.jpg" alt="Banking App" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" />
+            <h3 class="portfolio-list-title">Banking App</h3>
+            <p class="portfolio-list-text">App</p>
           </li>
           <li>
-            <img src="./images/portfolio-2.jpg" alt="Cashless Payment" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <img
+              src="./images/portfolio-2.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="portfolio-list-title">Cashless Payment</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio-3.jpg" alt="Meditation App" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <img
+              src="./images/portfolio-3.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3 class="portfolio-list-title">Meditation App</h3>
+            <p class="portfolio-list-text">App</p>
           </li>
           <li>
-            <img src="./images/portfolio-4.jpg" alt="Taxi Service" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <img
+              src="./images/portfolio-4.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+            <h3 class="portfolio-list-title">Taxi Service</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <img
+              src="./images/portfolio-5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h3 class="portfolio-list-title">Screen Illustrations</h3>
+            <p class="portfolio-list-text">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio-6.jpg" alt="Online Courses" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <img
+              src="./images/portfolio-6.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3 class="portfolio-list-title">Online Courses</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="logo" href="./index.html"
-        ><span class="logo-web">Web</span>Studio</a
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-footer-studio">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
