--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <address class="contacts-data">
         <ul>
           <li>
-            <a class="email" href="mailto:info@devstudio.com"
+            <a class="data" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="data" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
