--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <main>
       <section class="title">
         <div class="container">
-          <h1 class="title-header">Effective Solutions for Your Business</h1>
-          <div class="hero-button">
+          <div class="title-container">
+            <h1 class="title-header">Effective Solutions for Your Business</h1>
             <button class="title-button" type="button">Order Service</button>
           </div>
         </div>
